--- a/README
+++ b/README
@@ -56,6 +56,8 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
+* V. 0.7 (forthcoming): Add macro for resetting \today.
+
 * V. 0.6b (2014-12-12): Minor corrections in the manual and
                         example files.
 
