add github contact

--- a/README
+++ b/README
@@ -5,6 +5,8 @@ A package to help managing university courses.
 
 Maintained by Jürgen Spitzmüller
 E-mail: juergen (at) spitzmueller (dot) org
+Code repository and issue tracker:
+    https://github.com/jspitz/jslectureplanner
 
 Released under the LaTeX Project Public License v1.3 or later
 See http://www.latex-project.org/lppl.txt
