--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -4,6 +4,7 @@
 \usepackage[scaled=0.87]{beramono}
 \usepackage[T1]{fontenc}
 \usepackage[latin9]{inputenc}
+\usepackage{url}
 
 % markup
 \newcommand*\jmacro[1]{\textbf{\texttt{#1}}}
@@ -25,7 +26,7 @@
 
 \title{The jslectureplanner package}
 
-\author{Jürgen Spitzmüller\thanks{juergen@spitzmueller.org}}
+\author{Jürgen Spitzmüller\thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}}}
 
 \date{Version 0.7dev, 2014/12/31}
 
