--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -17,10 +17,12 @@
 %% 
 %% The Current Maintainer of this work is Juergen Spitzmueller.
 %%
+%% Code repository and issue tracker: https://github.com/jspitz/jslectureplanner
+%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2014/12/31}
-\def\fileversion{0.7dev}
+\def\filedate{2014/01/04}
+\def\fileversion{0.7}
 \def\filename{jslectureplanner.sty}
 
 \NeedsTeXFormat{LaTeX2e}
