--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -29,7 +29,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}}}
 
-\date{Version 0.7dev, 2015/01/02}
+\date{Version 0.7, 2015/01/04}
 
 \maketitle
 
@@ -580,9 +580,9 @@ those.
 \section{History}
 
 \begin{itemize}
-\item Forthcoming (v. 0.7): Add macro for resetting \jfcsmacro{today}.
-\item 2012/12/12 (v. 0.6\,b): Minor corrections in the manual and example files.
-\item 2012/12/12 (v. 0.6): Initial release to CTAN.
+\item 2015/01/04 (v. 0.7): Add macro for resetting \jfcsmacro{today}; minor corrections in the manual.
+\item 2014/12/12 (v. 0.6\,b): Minor corrections in the manual and example files.
+\item 2014/12/12 (v. 0.6): Initial release to CTAN.
 \end{itemize}
 
 \end{document}
