--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -176,7 +176,7 @@ description.}
 \item \joption{vl}: lecture (\emph{Vorlesung})
 \item \joption{vo}: lecture (alternative)
 \item \joption{ps}: undergraduate seminar (\emph{Proseminar})
-\item \joption{se}: seminar (Seminar)
+\item \joption{se}: seminar (\emph{Seminar})
 \item \joption{ue}: practical course (\emph{Übung})
 \item \joption{ko}: colloquium (\emph{Kolloquium})
 \item \joption{pv}: research seminar (\emph{Privatissimum})
