--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -541,7 +541,7 @@ is German for ``no''). To modify or translate this, redefine the
 following macro
 
 \begin{lstlisting}[language={[LaTeX]TeX},basicstyle={\small\ttfamily},frame=single]
-\newcommand*\leccancel{-- keine}
+\newcommand*\leccancel{\ -- keine \lectypesession}
 \end{lstlisting}
 
 
@@ -569,7 +569,8 @@ those.
 \begin{itemize}
 \item forthcoming (v. 0.8): Fix corruption of \jfcsmacro{today};
     add option and macro to set a room for the course as well as a session-specific room;
-    remove redundant lecture type \joption{vo} from the documentation.
+    remove redundant lecture type \joption{vo} from the documentation;
+    change \jcsmacro{leccancel} default definition in favour of better translatability.
 \item 2015/01/04 (v. 0.7): Add macro for resetting \jfcsmacro{today}; minor corrections in the manual.
 \item 2014/12/12 (v. 0.6\,b): Minor corrections in the manual and example files.
 \item 2014/12/12 (v. 0.6): Initial release to CTAN.
