--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -27,9 +27,9 @@
 \title{The jslectureplanner package}
 
 \author{Jürgen Spitzmüller%
-\thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}}}
+\thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 0.8dev, 2015/01/15}
+\date{Version 0.8, 2015/01/17}
 
 \maketitle
 
@@ -579,7 +579,7 @@ them for inclusion to the package.
 \section{History}
 
 \begin{itemize}
-\item forthcoming (v. 0.8): Fix corruption of \jfcsmacro{today};
+\item 2015/01/17 (v. 0.8): Fix corruption of \jfcsmacro{today};
     add framework for different styles;
     add option and macro to set a room for the course as well as a session-specific room;
     remove redundant lecture type \joption{vo} from the documentation;
