--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -21,8 +21,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2015/01/15}
-\def\fileversion{0.8dev}
+\def\filedate{2015/01/17}
+\def\fileversion{0.8}
 \def\filename{jslectureplanner.sty}
 
 \NeedsTeXFormat{LaTeX2e}
