--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -290,7 +290,7 @@ Possible \jmacro{<options>} are:
 \begin{itemize}
 \item \joption{units=<int>}: Number of interval units the break takes. One \emph{unit}
     is the number of days as specified by the \joption{interval} option (one week by
-    default\footnote{The former option \joption{weeks} is deprecated a of v. 0.9,
+    default\footnote{The former option \joption{weeks} is deprecated as of v. 0.9,
     since the interval can be adjusted now.}).
     This value is needed in order to increment the internal counter that is used to
     calculate the session dates. If \joption{units} is not specified, the counter is
